# PaperTrade

./: .env  .env.example  .gitignore  ANALYSIS_EXPLANATION.md  IMPLEMENTATION_SUMMARY.md  POLYMARKET_WALLET_CONNECTION_AUDIT.md  PSEUDOCODE.md  README.md  STRATEGY.md  STRATEGY_DOCUMENTATION.md  TRADING_SERVICE_USAGE.md  analyze_session.js  package-lock.json  package.json
.claude/: settings.local.json
data/: 2025-12-22_11-10-57_btc-updown-15m-1766401200.json  2025-12-22_11-15-02_btc-updown-15m-1766402100.json  2025-12-22_11-30-03_btc-updown-15m-1766403000.json  2025-12-22_11-38-48_btc-updown-15m-1766403000.json  2025-12-22_11-45-02_btc-updown-15m-1766403900.json  2025-12-22_11-56-13_btc-updown-15m-1766403900.json  2025-12-22_12-00-02_btc-updown-15m-1766404800.json  2025-12-22_12-15-04_btc-updown-15m-1766405700.json  2025-12-22_12-30-02_btc-updown-15m-1766406600.json  2025-12-22_12-45-06_btc-updown-15m-1766407500.json  2025-12-22_13-00-04_btc-updown-15m-1766408400.json  2025-12-22_13-15-07_btc-updown-15m-1766409300.json  2025-12-22_13-30-45_btc-updown-15m-1766410200.json  2025-12-22_13-45-02_btc-updown-15m-1766411100.json  2025-12-22_14-00-35_btc-updown-15m-1766412000.json  2025-12-22_14-15-37_btc-updown-15m-1766412900.json  2025-12-22_14-30-02_btc-updown-15m-1766413800.json  2025-12-22_14-39-20_btc-updown-15m-1766413800.json  (+20 more)
rust_bot/: .env.example  Cargo.toml  README.md
rust_bot/src/: binance.rs  config.rs  logger.rs  main.rs  models.rs  polymarket_price.rs  polymarket_price_simple.rs  quant.rs  slug_oracle.rs  trading.rs  wallet.rs
src/: binance.ts  config.ts  (+11 more)
(+32 files in other folders)
